[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "it-triage-notes"
version = "0.1.0"
description = "CLI tool for logging and triaging IT support incidents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ali Bidhendi", email = "alibidhendi2000@gmail.com" }]
keywords = ["it-support", "triage", "monitoring", "azure", "m365"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
it-triage = "it_triage.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
